Another differing countries case

--- a/vignettes/stoner.Rmd
+++ b/vignettes/stoner.Rmd
@@ -4,7 +4,7 @@ author: "Wes Hinsley"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{stoner}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
